--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.12.2
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 idna==2.5
+invoke==0.17.0
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
